Added files for new advanced search
Former-commit-id: 18fdd25c2e7c2161413f980b902daef7d98a7576

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -44,6 +44,8 @@ AcceptItem_lnkCancel = Abbrechen
 
 AdvancedSearchPage = Detailsuche 
 
+AdvancedSearchPageNew = [NEW] Erweiterte Suche
+
 AffiliationDetailAlternativeTitle = Alternativer Titel
 
 AffiliationDetailDescription = Beschreibung
@@ -1979,8 +1981,20 @@ adv_search_lblChkType_publishedpr = im Druck publiziert
 
 adv_search_lblChkType_submitted = eingereicht
 
+adv_search_lblClassification = [NEW] Klassifikation
+
 #Event
 adv_search_lblEventInvited = (neu) Eingeladen
+
+adv_search_lblFile = [NEW] Dateien
+
+adv_search_lblFileAvailable = [NEW] Dateien
+
+adv_search_lblFileAvailable_NO = [NEW] Nein
+
+adv_search_lblFileAvailable_WHATEVER = [NEW] Egal
+
+adv_search_lblFileAvailable_YES = [NEW] Ja
 
 #Date
 adv_search_lblFrom = Von
@@ -1991,6 +2005,8 @@ adv_search_lblLanguage = Sprache der Publikation
 
 #language
 adv_search_lblLanguageTerm = Sprache der Publikation
+
+adv_search_lblLocatorAvailable = [NEW] Ext. Referenzen
 
 adv_search_lblRgbAny = Alle Felder
 
@@ -2030,6 +2046,8 @@ adv_search_lblSearchPerson_translator = \u00DCbersetzer
 
 #Generic
 adv_search_lblSearchTerm = Suchbegriff:
+
+adv_search_lblSourceJournal = [NEW] Zeitschrift
 
 adv_search_lblTo = Bis
 
