--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -44,6 +44,8 @@ AcceptItem_lnkCancel = Cancel
 
 AdvancedSearchPage = Advanced Search
 
+AdvancedSearchPageNew = [NEW] Advanced Search
+
 AffiliationDetailAlternativeTitle = Alternative Title
 
 AffiliationDetailDescription = Description
@@ -1978,8 +1980,20 @@ adv_search_lblChkType_publishedpr = published in print
 
 adv_search_lblChkType_submitted = submitted
 
+adv_search_lblClassification = [NEW] Classification
+
 #Event
 adv_search_lblEventInvited = (neu) Invited
+
+adv_search_lblFile = [NEW] Files
+
+adv_search_lblFileAvailable = [NEW] Files
+
+adv_search_lblFileAvailable_NO = [NEW] No
+
+adv_search_lblFileAvailable_WHATEVER = [NEW] Whatever
+
+adv_search_lblFileAvailable_YES = [NEW] Yes
 
 #Date
 adv_search_lblFrom = From
@@ -1990,6 +2004,8 @@ adv_search_lblLanguage = Language of Publication
 
 #language
 adv_search_lblLanguageTerm = Language of Publication
+
+adv_search_lblLocatorAvailable = [NEW] Locators
 
 adv_search_lblRgbAny = Any Field
 
@@ -2029,6 +2045,8 @@ adv_search_lblSearchPerson_translator = Translator
 
 #Generic
 adv_search_lblSearchTerm = Search Term:
+
+adv_search_lblSourceJournal = [NEW] Journal
 
 adv_search_lblTo = To
 
