--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -44,6 +44,8 @@ AcceptItem_lnkCancel = Cancelar
 
 AdvancedSearchPage = B\u00FAsqueda avanzada
 
+AdvancedSearchPageNew = [NEW] Advanced Search
+
 AffiliationDetailAlternativeTitle = T\u00EDtulo alternativo
 
 AffiliationDetailDescription = Descripci\u00F3n
@@ -1919,8 +1921,20 @@ adv_search_lblChkType_publishedpr = publicado impreso
 
 adv_search_lblChkType_submitted = enviado
 
+adv_search_lblClassification = [NEW] Classification
+
 #Event
 adv_search_lblEventInvited = (neu) Invited
+
+adv_search_lblFile = [NEW] Files
+
+adv_search_lblFileAvailable = [NEW] Files
+
+adv_search_lblFileAvailable_NO = [NEW] No
+
+adv_search_lblFileAvailable_WHATEVER = [NEW] Whatever
+
+adv_search_lblFileAvailable_YES = [NEW] Yes
 
 #Date
 adv_search_lblFrom = De
@@ -1929,6 +1943,8 @@ adv_search_lblLanguage = Lengua de Publicaci\u00F3n
 
 #language
 adv_search_lblLanguageTerm = Lengua de Publicaci\u00F3n
+
+adv_search_lblLocatorAvailable = [NEW] Locators
 
 adv_search_lblRgbAny = Cualquier campo
 
@@ -1968,6 +1984,8 @@ adv_search_lblSearchPerson_translator = Traductor
 
 #Generic
 adv_search_lblSearchTerm = T\u00E9rmino de B\u00FAsqueda:
+
+adv_search_lblSourceJournal = [NEW] Journal
 
 adv_search_lblTo = To
 
