--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -44,6 +44,8 @@ AcceptItem_lnkCancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
 AdvancedSearchPage = \u8A73\u7D30\u691C\u7D22
 
+AdvancedSearchPageNew = [NEW] Advanced Search
+
 AffiliationDetailAlternativeTitle = \u305D\u306E\u4ED6\u306E\u30BF\u30A4\u30C8\u30EB
 
 AffiliationDetailDescription = \u6982\u8981
@@ -1952,8 +1954,20 @@ adv_search_lblChkType_publishedpr = \u7D19\u7248\u51FA\u7248\u65E5
 
 adv_search_lblChkType_submitted = \u6295\u7A3F\u65E5
 
+adv_search_lblClassification = [NEW] Classification
+
 #Event
 adv_search_lblEventInvited = (neu) Invited
+
+adv_search_lblFile = [NEW] Files
+
+adv_search_lblFileAvailable = [NEW] Files
+
+adv_search_lblFileAvailable_NO = [NEW] No
+
+adv_search_lblFileAvailable_WHATEVER = [NEW] Whatever
+
+adv_search_lblFileAvailable_YES = [NEW] Yes
 
 #Date
 adv_search_lblFrom = \u958B\u59CB\u65E5(YYYY-MM-DD)
@@ -1962,6 +1976,8 @@ adv_search_lblLanguage = \u8CC7\u6599\u306E\u8A00\u8A9E
 
 #language
 adv_search_lblLanguageTerm = \u8A00\u8A9E
+
+adv_search_lblLocatorAvailable = [NEW] Locators
 
 adv_search_lblRgbAny = \u5168\u9805\u76EE
 
@@ -2001,6 +2017,8 @@ adv_search_lblSearchPerson_translator = \u7FFB\u8A33\u8005
 
 #Generic
 adv_search_lblSearchTerm = \u691C\u7D22\u8A9E:
+
+adv_search_lblSourceJournal = [NEW] Journal
 
 adv_search_lblTo = \u7D42\u4E86\u65E5 \uFF08\u7701\u7565\u6642\u306F\u4ECA\u65E5\uFF09
 
