Breadcrumb adjusted for some special treatment Labels adjusted to behave the same for equal ones
Former-commit-id: f325ba0576896ddb11cf9023e0aaf6228e487719

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -590,7 +590,7 @@ EasySubmission = Einfache Eingabe
 
 EasySubmissionPage = Einfache Eingabe
 
-EasySubmission_lblFetchMetadata = Import
+EasySubmission_lblFetchMetadata = IMPORT
 
 EasySubmission_lblImportMetadata = Import
 
@@ -2717,6 +2717,8 @@ submission_lnkImport = Importieren
 submission_lnkImportWorkspace = Import Bereich
 
 submission_lnkMultipleImport = MASSENIMPORT
+
+submission_lnkMultipleImportCapitalized = Massenimport
 
 submission_lnkNewSubmission = DETAILLIERT
 
