--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -590,7 +590,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblFetchMetadata = Import
+EasySubmission_lblFetchMetadata = IMPORT
 
 EasySubmission_lblImportMetadata = Import
 
@@ -2719,6 +2719,8 @@ submission_lnkImport = Import
 submission_lnkImportWorkspace = Import Workspace
 
 submission_lnkMultipleImport = MULTIPLE IMPORT
+
+submission_lnkMultipleImportCapitalized = Multiple import
 
 submission_lnkNewSubmission = FULL
 
