--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -569,7 +569,7 @@ EasySubmission = Env\u00EDo f\u00E1cil
 
 EasySubmissionPage = Env\u00EDo f\u00E1cil
 
-EasySubmission_lblFetchMetadata = Traer
+EasySubmission_lblFetchMetadata = TRAER
 
 EasySubmission_lblImportMetadata = Importar
 
@@ -2614,6 +2614,8 @@ submission_lnkImport = Importar
 submission_lnkImportWorkspace = Importar Workspace
 
 submission_lnkMultipleImport = Importar m\u00FAltiples items
+
+submission_lnkMultipleImportCapitalized = Importar m\u00FAltiples items
 
 submission_lnkNewSubmission = Env\u00EDo completo
 
