--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2680,6 +2680,8 @@ submission_lnkImportWorkspace = \u4E00\u62EC\u767B\u9332\u72B6\u6CC1\u4E00\u89A7
 
 submission_lnkMultipleImport = \u8907\u6570\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u62EC\u767B\u9332
 
+submission_lnkMultipleImportCapitalized = \u8907\u6570\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u62EC\u767B\u9332
+
 submission_lnkNewSubmission = \u8A73\u7D30\u767B\u9332
 
 #
