PUBMAN-2326 fixed: File Size in ViewItem not displayed
Former-commit-id: 5ce22f33437e13c35de516486e8d8e4e1ba20b2e

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1195,7 +1195,7 @@ ViewItemFull_lblFileLicense = Lizenz
 
 ViewItemFull_lblFileLicenseShow = Lizenz in neuem Fenster anzeigen.
 
-ViewItemFull_lblFileMimeTypeSize = MIME-Typ / Gr\u00F6\u00DFe
+ViewItemFull_lblFileMimeTypeSize = MIME-Typ / Pr\u00FCfsumme
 
 ViewItemFull_lblFileName = Name
 
