--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -703,9 +703,9 @@ EditItem_lblIssue = Issue
 
 EditItem_lblItemDepositor = (new) Created by
 
-EditItem_lblItemLatestModifier = (new) Last modified by
-
 EditItem_lblItemLatestModification = (new) Last modification date
+
+EditItem_lblItemLatestModifier = (new) Last modified by
 
 EditItem_lblItemVersionID = (new) Item ID: 
 
@@ -1195,7 +1195,7 @@ ViewItemFull_lblFileLicense = License
 
 ViewItemFull_lblFileLicenseShow = Open license in a new window.
 
-ViewItemFull_lblFileMimeTypeSize = MIME-Type / Size
+ViewItemFull_lblFileMimeTypeSize = MIME-Type / Checksum
 
 ViewItemFull_lblFileName = Name
 
