--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -684,9 +684,9 @@ EditItem_lblIssue = \u53F7
 
 EditItem_lblItemDepositor = (new) Created by
 
-EditItem_lblItemLatestModifier = (new) Last modified by
-
 EditItem_lblItemLatestModification = (new) Last modification date
+
+EditItem_lblItemLatestModifier = (new) Last modified by
 
 EditItem_lblItemVersionID = (new) Item ID: 
 
@@ -1172,7 +1172,7 @@ ViewItemFull_lblFileLicense = CC\u30E9\u30A4\u30BB\u30F3\u30B9
 
 ViewItemFull_lblFileLicenseShow = \u5225\u30A6\u30A3\u30F3\u30C9\u30A6\u3067\u30E9\u30A4\u30BB\u30F3\u30B9\u60C5\u5831\u3092\u898B\u308B
 
-ViewItemFull_lblFileMimeTypeSize = MIME-Type / \u30B5\u30A4\u30BA
+ViewItemFull_lblFileMimeTypeSize = MIME-Type / Checksum
 
 ViewItemFull_lblFileName = \u30D5\u30A1\u30A4\u30EB\u540D
 
