--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -694,9 +694,9 @@ EditItem_lblIssue = N\u00FAmero
 
 EditItem_lblItemDepositor = (new) Created by
 
-EditItem_lblItemLatestModifier = (new) Last modified by
-
 EditItem_lblItemLatestModification = (new) Last modification date
+
+EditItem_lblItemLatestModifier = (new) Last modified by
 
 EditItem_lblItemVersionID = (new) Item ID: 
 
@@ -1183,7 +1183,7 @@ ViewItemFull_lblFileLicense = Licencia
 
 ViewItemFull_lblFileLicenseShow = Abri licencia en una ventana nueva.
 
-ViewItemFull_lblFileMimeTypeSize = Typo-MIME / Tama\u00F1o
+ViewItemFull_lblFileMimeTypeSize = Typo-MIME / Checksum
 
 ViewItemFull_lblFileName = Nombre
 
