--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -716,7 +716,7 @@ List_lblSortOptions = Sortieren
 
 List_lblViewOptions = Ansicht
 
-List_lkAll = Alle auf einer Seite
+List_lkAll = Alle auf der Seite
 
 List_lkDetails = Details
 
@@ -740,6 +740,8 @@ List_lkPrevious = Vorhergehende
 List_lkShortView = Kurzansicht (alle Datens\u00E4tze)
 
 List_lkShow = Anzeigen
+
+List_lkToggle = Auswahl umkehren
 
 LocalTagsPage = lokale Tags
 
