--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -738,6 +738,8 @@ List_lkShortView = Vista abreviada (todos los items)
 
 List_lkShow = Mostrar
 
+List_lkToggle = Toggle all
+
 LocalTagsPage = Etiquetas Locales
 
 LoginErrorPage = Estado del Login
