--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -741,6 +741,8 @@ List_lkShortView = Short View (All Items)
 
 List_lkShow = Show
 
+List_lkToggle = Toggle all
+
 LocalTagsPage = Local Tags
 
 LoginErrorPage = Login state
