--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -743,6 +743,8 @@ List_lkShortView = Short View (all Items)
 
 List_lkShow = Show
 
+List_lkToggle = Toggle all
+
 LocalTagsPage = Local Tags
 
 LoginErrorPage = Login state
