Resolved [PUBMAN-2331] - View item: Errors after giving a false page number in gotoBox Resolved [PUBMAN-2330] - View item: after clicking "Revisions" the number of items is cleared Resolved [PUBMAN-2329] - View item: skipToFirst button does not work
Former-commit-id: 4b1b6afbe8a8ba8551224d8cdcb0a2a1ce58d126

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -258,6 +258,8 @@ ViewItemFull_user_has_no_context = Sie haben keine Privilegien um Datens\u00E4tz
 
 ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
 
+ViewItemFull_browse_to_item_not_in_range = (new) Das Item zu dem gesprungen werden soll liegt nicht im Wertebereich.
+
 #
 # View Item
 #
