--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -264,6 +264,8 @@ ViewItemFull_user_has_no_context = You do not have privileges to create an item.
 
 ViewItemFull_withdrawn = This item is discarded!
 
+ViewItemFull_browse_to_item_not_in_range = (new) The item to jump to the lies out of range.
+
 #
 # View Item
 #
