--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -258,6 +258,8 @@ ViewItemFull_user_has_no_context = You do not have privileges to create an item.
 
 ViewItemFull_withdrawn = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u53D6\u308A\u4E0B\u3052\u3089\u308C\u307E\u3057\u305F\u3002
 
+ViewItemFull_browse_to_item_not_in_range = (new) The item to jump to the lies out of range.
+
 #
 # View Item
 #
