--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -224,6 +224,8 @@ ViewItemFull_user_has_no_context = Usted no est\u00E1 autorizado para crear un i
 
 ViewItemFull_withdrawn = \u00A1Este item ha sido retirado!
 
+ViewItemFull_browse_to_item_not_in_range = (new) The item to jump to the lies out of range.
+
 #
 # View Item
 #
