PUBMAN-2319 fixed: coding problem with "Add New Local Files" button in japanese
Former-commit-id: ef288d75e112a2f4a593287c3a126174a9cd561c

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -603,7 +603,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = add
 
-EditItem_btAddFile = (NEW) Add New Local File(s)
+EditItem_btAddFile = (NEW) Add Local File(s)
 
 EditItem_btAddTitle = Add Alternative Title
 
