--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -584,7 +584,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = \u8FFD\u52A0
 
-EditItem_btAddFile = \u65B0\u3057\u3044\u30D5\u30A1\u30A4\u30EB\u3092\u8FFD\u52A0\u3059\u308B
+EditItem_btAddFile = Add Local File(s)
 
 EditItem_btAddTitle = \u5225\u30BF\u30A4\u30C8\u30EB\u3092\u8FFD\u52A0
 
