PUBMAN-2352 fixed: Tooltip for elements in contentMenu is missing
Former-commit-id: e72ace8ad0c793b0b5ae4707239ab090c3325841

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -693,7 +693,7 @@ List_ShortView = Kurzansicht
 
 List_btGo = Gehe zur ausgew\u00E4hlten Seite
 
-List_lblAddToBasket = Zur Ablage hinzuf\uFFFDgen
+List_lblAddToBasket = Zur Ablage hinzuf\u00FCgen
 
 List_lblBibList = Bibliographische Liste
 
@@ -754,6 +754,8 @@ Login_login_logout = Login/Logout
 
 MainMenu_ImportWorkspacesPage = Gehe zur Import Seite.
 
+MainMenu_ToolsPage = (new) Gehe zur Werkzeug-\u00DCbersicht
+
 MainMenu_WorkspacesPage = (new) Gehe zur \u00DCbersicht der Arbeitsbereiche
 
 MainMenu_cartItemsPage = Gehe zur Ablage.
@@ -766,8 +768,6 @@ MainMenu_myItems = Gehe zum Depositor Arbeitsplatz.
 NoSearchResultListPage = Keine Suchergebnisse
 
 NoSearchResultsPage = Keine Treffer
-
-MainMenu_ToolsPage = (new) Gehe zur Werkzeug\u002D\u00DCbersicht
 
 #
 # Quality Assurance / Moderator Workspace
