Former-commit-id: 473cfd9349c6350df4d2f4d11ad59ee28dd39720

--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -584,7 +584,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = a\u00F1adir
 
-EditItem_btAddFile = A\u00F1adir nuevo fichero
+EditItem_btAddFile = Add File(s)
 
 EditItem_btAddFileLoc = A\u00F1adir nuevo localizador
 
@@ -692,15 +692,15 @@ EditItem_lblGenre = G\u00E9nero
 
 EditItem_lblIssue = N\u00FAmero
 
-EditItem_lblItemDepositor = (new) Created by
+EditItem_lblItemDepositor = Created by
 
-EditItem_lblItemLatestModification = (new) Last modification date
+EditItem_lblItemLatestModification = Last modification date
 
-EditItem_lblItemLatestModifier = (new) Last modified by
+EditItem_lblItemLatestModifier = Last modified by
 
-EditItem_lblItemVersionID = (new) Item ID: 
+EditItem_lblItemVersionID = Item ID: 
 
-EditItem_lblItemlatestChange = (new) Created on
+EditItem_lblItemlatestChange = Created on
 
 EditItem_lblLicencingInfo = Licencia
 
@@ -1015,7 +1015,7 @@ SearchResultList_lblItems = Items
 
 SearchResultList_lblNoHits = 0 Resultados
 
-SearchResultList_lblRestServiceExamplePage = (new) Insert query in REST-Interface 
+SearchResultList_lblRestServiceExamplePage = Insert query in REST-Interface 
 
 #
 # SearchResultList
@@ -1030,7 +1030,7 @@ SearchResultList_lblSortedBy = por
 
 Search_lblShowHide = mostrar/ocultar
 
-ShowQuery = (new) Mostrar consulta de b\u00FAsqueda
+ShowQuery = Mostrar consulta de b\u00FAsqueda
 
 #
 # Submission
@@ -1073,41 +1073,41 @@ SubmitItem_lnkSubmit = Enviar
 #
 # Tools
 #
-ToolsPage = (new) Tools
+ToolsPage = Tools
 
-Tools_lblCoNE = (new) CoNE
+Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = Control of Named Entities (CoNE) 
 
-Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblREST = (new) REST
+Tools_lblREST = REST
 
-Tools_lblRESTHead = (new) Search and Export (REST-Interface)
+Tools_lblRESTHead = Search and Export (REST-Interface)
 
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface. 
+Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface. 
 
-Tools_lblSWORD = (new) SWORD
+Tools_lblSWORD = SWORD
 
-Tools_lblSWORDHead = (new) SWORD-Interface
+Tools_lblSWORDHead = SWORD-Interface
 
-Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
+Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
 
-Tools_lblTools = (new) Tools
+Tools_lblTools = Tools
 
-Tools_lblUnAPI = (new) unAPI
+Tools_lblUnAPI = unAPI
 
-Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
+Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
 
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
+Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
 
-Tools_lblValidationService = (new) Validation service
+Tools_lblValidationService = Validation service
 
-Tools_lblValidationServiceHead = (new) Validation service
+Tools_lblValidationServiceHead = Validation service
 
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness.
+Tools_lblValidationServiceText = Check your XML data for formal correctness.
 
 ViewItemFull_btnFileSection = Ficheros
 
@@ -1924,7 +1924,7 @@ adv_search_lblChkType_submitted = enviado
 adv_search_lblClassification = [NEW] Classification
 
 #Event
-adv_search_lblEventInvited = (neu) Invited
+adv_search_lblEventInvited = Invited
 
 adv_search_lblFile = [NEW] Files
 
@@ -2424,7 +2424,7 @@ mainMenu_lblQA = Garant\u00EDa de calidad
 
 mainMenu_lblSubmission = ENV\u00CDO
 
-mainMenu_lblTools = (new) Instrumentos
+mainMenu_lblTools = Instrumentos
 
 mainMenu_lnkBlog = Blog
 
