--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -258,7 +258,7 @@ ViewItemFull_user_has_no_context = Sie haben keine Privilegien um Datens\u00E4tz
 
 ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
 
-ViewItemFull_browse_to_item_not_in_range = (new) Das Item zu dem gesprungen werden soll liegt nicht im Wertebereich.
+ViewItemFull_browse_to_item_not_in_range = Der eingegebene Wert existiert nicht
 
 #
 # View Item
@@ -319,7 +319,7 @@ copyright = \u00A9 2007 Max Planck Gesellschaft
 #
 create_Item_Select_Collection = Bitte w\u00E4hlen Sie die Collection aus, in der Sie Ihren Datensatz erstellen m\u00F6chten.
 
-deleteItemsFromBasket_NoItemSelected = (new) Bitte w\u00E4hlen Sie mindestens einen Datensatz aus.
+deleteItemsFromBasket_NoItemSelected = Bitte w\u00E4hlen Sie mindestens einen Datensatz aus.
 
 #
 # Delete Message
@@ -362,7 +362,7 @@ depositorWS_valNoItemsMsg = Sie haben keine Datens\u00E4tze im gew\u00E4hlten St
 
 depositorWS_wrongItemState = Ein oder mehrere Datens\u00E4tze m\u00FCssen zum Ausf\u00FChren der gew\u00E4hlen Aktion korrigiert werden.
 
-depositorWE_noOpenContextsAvailable = (new) Es ist kein ge\u00F6ffneter Kontext verf\u00FCgbar.
+depositorWE_noOpenContextsAvailable = Es ist kein ge\u00F6ffneter Kontext verf\u00FCgbar.
 
 easy_submission_ExternalLocators = Zus\u00E4tzlich k\u00F6nnen Sie hier die URL zu extern abgelegtem Supplementary Material angeben.
 
@@ -590,7 +590,7 @@ import_process_transformation_done = Die Transformation ist abgeschlossen
 
 import_process_validate = Validierung des Datensatzes
 
-itemHasBeenChangedInTheMeantime = (new) Ein unerwarteter Fehler ist aufgetreten. Bitte wenden Sie sich an den PubMan Support.
+itemHasBeenChangedInTheMeantime = Ein unerwarteter Fehler ist aufgetreten. Bitte wenden Sie sich an den PubMan Support.
 
 # EditItem
 itemHasNotBeenChanged = Der Datensatz wurde nicht ge\u00E4ndert und somit auch nicht erneut abgespeichert.
@@ -667,9 +667,9 @@ search_TechnicalError = Technischer Fehler bei der Bearbeitung der Suche aufgetr
 #
 # Tools
 #
-toolsOverview = (new) Hier finden Sie eine \u00DCbersicht \u00FCber die verf\u00FCgbaren Werkzeuge und Schnittstellen. 
+toolsOverview = Hier finden Sie eine \u00DCbersicht \u00FCber die verf\u00FCgbaren Werkzeuge und Schnittstellen. 
 
-toolsMoreInformation =  (new) Weitere Informationen finden Sie unter:
+toolsMoreInformation =  Weitere Informationen finden Sie unter:
 
 #
 # Common
