--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -250,7 +250,7 @@ UnknownLanguageCode = The given language code does not exist in ISO639-3
 
 UploadFileNotProvided = Please select a file
 
-ViewItemFull_latestMessage = (new) Latest Message:
+ViewItemFull_latestMessage = Latest Message:
 
 ViewItemFull_inRevision = This item is in rework! Last message:
 
@@ -264,7 +264,7 @@ ViewItemFull_user_has_no_context = You do not have privileges to create an item.
 
 ViewItemFull_withdrawn = This item is discarded!
 
-ViewItemFull_browse_to_item_not_in_range = (new) The item to jump to the lies out of range.
+ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 #
 # View Item
@@ -325,7 +325,7 @@ copyright = \u00A9 2007 Max Planck Society
 #
 create_Item_Select_Collection = Please choose a collection for your item.
 
-deleteItemsFromBasket_NoItemSelected = (new) Please select at least one Item.
+deleteItemsFromBasket_NoItemSelected = Please select at least one item.
 
 #
 # Delete Message
@@ -368,7 +368,7 @@ depositorWS_valNoItemsMsg = You have no items in the selected state.
 
 depositorWS_wrongItemState = One or more items are in the wrong state for this action.
 
-depositorWE_noOpenContextsAvailable = (new) No open context available.
+depositorWE_noOpenContextsAvailable = No open context available.
 
 easy_submission_ExternalLocators = In addition you can reference externally located supplementary material by providing the URL below.
 
@@ -599,7 +599,7 @@ import_process_transformation_done = Transformation done
 
 import_process_validate = Validating item
 
-itemHasBeenChangedInTheMeantime = (new) An unexpected error occurred. Please contact PubMan Support.
+itemHasBeenChangedInTheMeantime = An unexpected error occurred. Please contact PubMan Support.
 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
@@ -676,9 +676,9 @@ search_TechnicalError = Technical error while processing the search query
 #
 # Tools
 #
-toolsOverview = (new) Here is an overview of the available tools and interfaces.
+toolsOverview = Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = (new) Further information can be found here:
+toolsMoreInformation = Further information can be found here:
 
 #
 # Common
