--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -212,7 +212,7 @@ TotalNumberOfPagesNotProvided = The total number of pages must be provided
 
 UploadFileNotProvided = NEW: Please select a file
 
-ViewItemFull_latestMessage = (new) Latest Message:
+ViewItemFull_latestMessage = Latest Message:
 
 ViewItemFull_inRevision = \u00A1Este item est\u00E1 siendo revisado! \u00DAltimo mensaje:
 
@@ -224,7 +224,7 @@ ViewItemFull_user_has_no_context = Usted no est\u00E1 autorizado para crear un i
 
 ViewItemFull_withdrawn = \u00A1Este item ha sido retirado!
 
-ViewItemFull_browse_to_item_not_in_range = (new) The item to jump to the lies out of range.
+ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 #
 # View Item
@@ -328,7 +328,7 @@ depositorWS_valNoItemsMsg = No tiene item en el estado seleccionado.
 
 depositorWS_wrongItemState = Uno o m\u00E1s items no est\u00E1n en el estado  correcto para esta acci\u00F3n.
 
-depositorWE_noOpenContextsAvailable = (new) No open context available.
+depositorWE_noOpenContextsAvailable = No open context available.
 
 easy_submission_ExternalLocators = Adem\u00E1s puede referenciar material complementario localizado externamente proporcionando la URL a continuaci\u00F3n.
 
@@ -628,9 +628,9 @@ search_TechnicalError = Se ha producido un error t\u00E9cnico mientras se proces
 #
 # Tools
 #
-toolsOverview = (new) Here is an overview of the available tools and interfaces.
+toolsOverview = Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = (new) Further information can be found here:
+toolsMoreInformation = Further information can be found here:
 
 #
 # Common
