--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -754,9 +754,9 @@ Login_login_logout = Login/Logout
 
 MainMenu_ImportWorkspacesPage = Gehe zur Import Seite.
 
-MainMenu_ToolsPage = (new) Gehe zur Werkzeug-\u00DCbersicht
+MainMenu_ToolsPage = Gehe zur Werkzeug-\u00DCbersicht
 
-MainMenu_WorkspacesPage = (new) Gehe zur \u00DCbersicht der Arbeitsbereiche
+MainMenu_WorkspacesPage = Gehe zur \u00DCbersicht der Arbeitsbereiche
 
 MainMenu_cartItemsPage = Gehe zur Ablage.
 
