--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = Abbrechen
 
 AdvancedSearchPage = Detailsuche 
 
-AdvancedSearchPageNew = [NEW] Erweiterte Suche
+AdvancedSearchPageNew = Erweiterte Suche
 
 AffiliationDetailAlternativeTitle = Alternativer Titel
 
@@ -603,7 +603,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = hinzuf\u00FCgen
 
-EditItem_btAddFile = (NEW) Lokale Datei(en) hochladen
+EditItem_btAddFile = Datei(en) hochladen
 
 EditItem_btAddTitle = Alternativen Titel hinzuf\u00FCgen
 
@@ -701,15 +701,15 @@ EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Heftnummer
 
-EditItem_lblItemDepositor = (new) Erstellt von
+EditItem_lblItemDepositor = Erstellt von
 
-EditItem_lblItemLatestModification = (new) Zuletzt ge\u00E4ndert am
+EditItem_lblItemLatestModification = Zuletzt ge\u00E4ndert am
 
-EditItem_lblItemLatestModifier = (new) Zuletzt ge\u00E4ndert von
+EditItem_lblItemLatestModifier = Zuletzt ge\u00E4ndert von
 
-EditItem_lblItemVersionID = (new) ID des Datensatzes: 
+EditItem_lblItemVersionID = ID des Datensatzes: 
 
-EditItem_lblItemlatestChange = (new) Erstellt am
+EditItem_lblItemlatestChange = Erstellt am
 
 EditItem_lblLicencingInfo = Lizenz
 
@@ -1027,7 +1027,7 @@ SearchResultList_lblItems = Datens\u00E4tze
 
 SearchResultList_lblNoHits = 0 Treffer
 
-SearchResultList_lblRestServiceExamplePage = (new) In die REST-Schnittstelle \u00FCbernehmen
+SearchResultList_lblRestServiceExamplePage = Abfrage in die REST-Schnittstelle \u00FCbernehmen
 
 #
 # SearchResultList
@@ -1085,41 +1085,41 @@ SubmitItem_lnkSubmit = Einstellen
 #
 # Tools
 #
-ToolsPage = (new) Werkzeuge
+ToolsPage = Werkzeuge
 
-Tools_lblCoNE = (new) CoNE
+Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = Control of Named Entities (CoNE) 
 
-Tools_lblCoNEText = (new) Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
+Tools_lblCoNEText = Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblREST = (new) REST
+Tools_lblREST = REST
 
-Tools_lblRESTHead = (new) Suchen und Exportieren (REST-Schnittstelle)
+Tools_lblRESTHead = Suchen und Exportieren (REST-Schnittstelle)
 
-Tools_lblRESTText = (new) M\u00F6chten Sie Ihre PubMan-Daten in einem externen System integrieren? Die notwendigen Abfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
+Tools_lblRESTText = M\u00F6chten Sie Ihre PubMan-Daten in einem externen System integrieren? Die notwendigen Abfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
 
-Tools_lblSWORD = (new) SWORD
+Tools_lblSWORD = SWORD
 
-Tools_lblSWORDHead = (new) SWORD-Schnittstelle
+Tools_lblSWORDHead = SWORD-Schnittstelle
 
-Tools_lblSWORDText = (new) Nutzen Sie diesen Push-Dienst zum automatisierten Datenimport von externen Servern. 
+Tools_lblSWORDText = Nutzen Sie diesen Push-Dienst zum automatisierten Datenimport von externen Servern. 
 
-Tools_lblTools = (new) Werkzeuge
+Tools_lblTools = Werkzeuge
 
-Tools_lblUnAPI = (new) unAPI
+Tools_lblUnAPI = unAPI
 
-Tools_lblUnAPIHead = (new) Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
+Tools_lblUnAPIHead = Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
 
-Tools_lblUnAPIText = (new) M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle.
+Tools_lblUnAPIText = M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle.
 
-Tools_lblValidationService = (new) Validierungsservice
+Tools_lblValidationService = Validierungsservice
 
-Tools_lblValidationServiceHead = (new) Validierungsservice
+Tools_lblValidationServiceHead = Validierungsservice
 
-Tools_lblValidationServiceText = (new) Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit. 
+Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit. 
 
 ViewItemFull_btnFileSection = Dateien
 
@@ -1369,7 +1369,7 @@ ViewItemLogPage = Bearbeitungsgeschichte
 
 ViewItemLog_Header = Bearbeitungsgeschichte
 
-ViewItemLog_lblAssignVersionPid = [NEW] Versions-PID zugewiesen am
+ViewItemLog_lblAssignVersionPid = Versions-PID zugewiesen am
 
 ViewItemLog_lblComment = Beschreibung:
 
@@ -1984,7 +1984,7 @@ adv_search_lblChkType_submitted = eingereicht
 adv_search_lblClassification = [NEW] Klassifikation
 
 #Event
-adv_search_lblEventInvited = (neu) Eingeladen
+adv_search_lblEventInvited = Eingeladen
 
 adv_search_lblFile = [NEW] Dateien
 
@@ -1999,7 +1999,7 @@ adv_search_lblFileAvailable_YES = [NEW] Ja
 #Date
 adv_search_lblFrom = Von
 
-adv_search_lblInclHistory = (neu) Vorg\u00E4nger- und Nachfolge-Institutionen ber\u00FCcksichtigen
+adv_search_lblInclHistory = Vorg\u00E4nger- und Nachfolge-Institutionen ber\u00FCcksichtigen
 
 adv_search_lblLanguage = Sprache der Publikation
 
@@ -2511,7 +2511,7 @@ mainMenu_lblQA = Qualit\u00E4ts- sicherung
 
 mainMenu_lblSubmission = EINGABE
 
-mainMenu_lblTools = (new) Werkzeuge
+mainMenu_lblTools = Werkzeuge
 
 mainMenu_lnkBlog = Blog
 
