--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -603,7 +603,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = add
 
-EditItem_btAddFile = (NEW) Add Local File(s)
+EditItem_btAddFile = Add File(s)
 
 EditItem_btAddTitle = Add Alternative Title
 
@@ -701,15 +701,15 @@ EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Issue
 
-EditItem_lblItemDepositor = (new) Created by
+EditItem_lblItemDepositor = Created by
 
-EditItem_lblItemLatestModification = (new) Last modification date
+EditItem_lblItemLatestModification = Last modification date
 
-EditItem_lblItemLatestModifier = (new) Last modified by
+EditItem_lblItemLatestModifier = Last modified by
 
-EditItem_lblItemVersionID = (new) Item ID: 
+EditItem_lblItemVersionID = Item ID: 
 
-EditItem_lblItemlatestChange = (new) Created on
+EditItem_lblItemlatestChange = Created on
 
 EditItem_lblLicencingInfo = License
 
@@ -1027,7 +1027,7 @@ SearchResultList_lblItems = Items
 
 SearchResultList_lblNoHits = 0 Hits
 
-SearchResultList_lblRestServiceExamplePage = (new) Insert query in REST-Interface
+SearchResultList_lblRestServiceExamplePage = Insert query in REST-Interface
 
 #
 # SearchResultList
@@ -1085,41 +1085,41 @@ SubmitItem_lnkSubmit = Submit
 #
 # Tools
 #
-ToolsPage = (new) Tools
+ToolsPage = Tools
 
-Tools_lblCoNE = (new) CoNE
+Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = Control of Named Entities (CoNE) 
 
-Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblREST = (new) REST
+Tools_lblREST = REST
 
-Tools_lblRESTHead = (new) Search and Export (REST-Interface)
+Tools_lblRESTHead = Search and Export (REST-Interface)
 
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via REST-Interface.
+Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via REST-Interface.
 
-Tools_lblSWORD = (new) SWORD
+Tools_lblSWORD = SWORD
 
-Tools_lblSWORDHead = (new) SWORD-Interface
+Tools_lblSWORDHead = SWORD-Interface
 
-Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
+Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
 
-Tools_lblTools = (new) Tools
+Tools_lblTools = Tools
 
-Tools_lblUnAPI = (new) unAPI
+Tools_lblUnAPI = unAPI
 
-Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
+Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
 
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
+Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
 
-Tools_lblValidationService = (new) Validation service
+Tools_lblValidationService = Validation service
 
-Tools_lblValidationServiceHead = (new) Validation service
+Tools_lblValidationServiceHead = Validation service
 
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness.
+Tools_lblValidationServiceText = Check your XML data for formal correctness.
 
 ViewItemFull_btnFileSection = Files
 
@@ -1372,7 +1372,7 @@ ViewItemLogPage = Log
 
 ViewItemLog_Header = Log 
 
-ViewItemLog_lblAssignVersionPid = [NEW] Version PID assigned on
+ViewItemLog_lblAssignVersionPid = Version PID assigned on
 
 ViewItemLog_lblComment = Description:
 
@@ -1983,7 +1983,7 @@ adv_search_lblChkType_submitted = submitted
 adv_search_lblClassification = [NEW] Classification
 
 #Event
-adv_search_lblEventInvited = (neu) Invited
+adv_search_lblEventInvited = Invited
 
 adv_search_lblFile = [NEW] Files
 
@@ -1998,7 +1998,7 @@ adv_search_lblFileAvailable_YES = [NEW] Yes
 #Date
 adv_search_lblFrom = From
 
-adv_search_lblInclHistory = (neu) Include history
+adv_search_lblInclHistory = Include history
 
 adv_search_lblLanguage = Language of Publication
 
