--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -584,7 +584,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = \u8FFD\u52A0
 
-EditItem_btAddFile = Add Local File(s)
+EditItem_btAddFile = Add File(s)
 
 EditItem_btAddTitle = \u5225\u30BF\u30A4\u30C8\u30EB\u3092\u8FFD\u52A0
 
@@ -682,15 +682,15 @@ EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
 EditItem_lblIssue = \u53F7
 
-EditItem_lblItemDepositor = (new) Created by
+EditItem_lblItemDepositor = Created by
 
-EditItem_lblItemLatestModification = (new) Last modification date
+EditItem_lblItemLatestModification = Last modification date
 
-EditItem_lblItemLatestModifier = (new) Last modified by
+EditItem_lblItemLatestModifier = Last modified by
 
-EditItem_lblItemVersionID = (new) Item ID: 
+EditItem_lblItemVersionID = Item ID: 
 
-EditItem_lblItemlatestChange = (new) Created on
+EditItem_lblItemlatestChange = Created on
 
 EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9
 
@@ -1004,7 +1004,7 @@ SearchResultList_lblItems = \u4EF6
 
 SearchResultList_lblNoHits = 0 \u4EF6
 
-SearchResultList_lblRestServiceExamplePage = (new) Insert query in REST-Interface
+SearchResultList_lblRestServiceExamplePage = Insert query in REST-Interface
 
 #
 # SearchResultList
@@ -1062,41 +1062,41 @@ SubmitItem_lnkSubmit = \u767B\u9332
 #
 # Tools
 #
-ToolsPage = (new) Tools
+ToolsPage = Tools
 
-Tools_lblCoNE = (new) CoNE
+Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = (new) \u540D\u524D\u4ED8\u304D\u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u5236\u5FA1 (CoNE) 
+Tools_lblCoNEHead = Control of Named Entities (CoNE) 
 
-Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblREST = (new) REST
+Tools_lblREST = REST
 
-Tools_lblRESTHead = (new) \u691C\u7D22\u3068\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 (REST-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
+Tools_lblRESTHead = Search and Export (REST-Interface)
 
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface.
+Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via REST-Interface.
 
-Tools_lblSWORD = (new) SWORD
+Tools_lblSWORD = SWORD
 
-Tools_lblSWORDHead = (new) SWORD-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
+Tools_lblSWORDHead = SWORD-Interface
 
-Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
+Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
 
-Tools_lblTools = (new) \u30C4\u30FC\u30EB
+Tools_lblTools = Tools
 
-Tools_lblUnAPI = (new) unAPI
+Tools_lblUnAPI = unAPI
 
-Tools_lblUnAPIHead = (new) \u30C7\u30FC\u30BF\u8EE2\u9001\u306E\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9 (unAPI-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
+Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
 
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface.
+Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
 
-Tools_lblValidationService = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+Tools_lblValidationService = Validation service
 
-Tools_lblValidationServiceHead = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+Tools_lblValidationServiceHead = Validation service
 
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness.
+Tools_lblValidationServiceText = Check your XML data for formal correctness.
 
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
 
@@ -1957,7 +1957,7 @@ adv_search_lblChkType_submitted = \u6295\u7A3F\u65E5
 adv_search_lblClassification = [NEW] Classification
 
 #Event
-adv_search_lblEventInvited = (neu) Invited
+adv_search_lblEventInvited = Invited
 
 adv_search_lblFile = [NEW] Files
 
