--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -244,7 +244,7 @@ UnknownLanguageCode = The given language code does not exist in ISO639-3
 
 UploadFileNotProvided = NEW: Please select a file
 
-ViewItemFull_latestMessage = (new) Latest Message:
+ViewItemFull_latestMessage = Latest Message:
 
 ViewItemFull_inRevision = This item is in rework! Last message:
 
@@ -258,7 +258,7 @@ ViewItemFull_user_has_no_context = You do not have privileges to create an item.
 
 ViewItemFull_withdrawn = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u53D6\u308A\u4E0B\u3052\u3089\u308C\u307E\u3057\u305F\u3002
 
-ViewItemFull_browse_to_item_not_in_range = (new) The item to jump to the lies out of range.
+ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 #
 # View Item
@@ -319,7 +319,7 @@ copyright = \u00A9 2007 Max Planck Society
 #
 create_Item_Select_Collection = \u30A2\u30A4\u30C6\u30E0\u3092\u767B\u9332\u3059\u308B\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-deleteItemsFromBasket_NoItemSelected = Please select at least one Item to delete.
+deleteItemsFromBasket_NoItemSelected = Please select at least one item to delete.
 
 #
 # Delete Message
@@ -362,7 +362,7 @@ depositorWS_valNoItemsMsg = \u6307\u5B9A\u3055\u308C\u305F\u767B\u9332\u72B6\u6C
 
 depositorWS_wrongItemState = One or more items are in the wrong state for this action.
 
-depositorWE_noOpenContextsAvailable = (new) No open context available.
+depositorWE_noOpenContextsAvailable = No open context available.
 
 easy_submission_ExternalLocators = \u5916\u90E8\u30B5\u30FC\u30D0\u306B\u3042\u308B\u8FFD\u52A0\u306E\u4ED8\u968F\u8CC7\u6599\u306EURL\u3092\u4EE5\u4E0B\u3067\u6307\u5B9A\u3059\u308B\u3053\u3068\u3067\u53C2\u7167\u30EA\u30F3\u30AF\u3092\u5F35\u308B\u3053\u3068\u3082\u3067\u304D\u307E\u3059\u3002
 
@@ -672,9 +672,9 @@ search_TechnicalError = Technical error while processing the search query
 #
 # Tools
 #
-toolsOverview = (new) Here is an overview of the available tools and interfaces.
+toolsOverview = Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = (new) Further information can be found here:
+toolsMoreInformation = Further information can be found here:
 
 #
 # Common
