Former-commit-id: d9f12341a4e770d0e80074b5480ce7a64ebdfaf3

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1424,7 +1424,7 @@ ViewItemMedium_lblGenre = Genre
 
 ViewItemMedium_lblPages = Gesamtseitenzahl
 
-ViewItemMedium_lblPublishingInfo = Verlag, Ort, Ausgabe
+ViewItemMedium_lblPublishingInfo = Ausgabe, Ort, Verlag
 
 ViewItemMedium_lblSequence = Artikelnummer
 
@@ -1442,7 +1442,7 @@ ViewItemMedium_lblSourceGenre = Genre der Quelle
 
 ViewItemMedium_lblSourceIdentifier = Identifikator
 
-ViewItemMedium_lblSourcePubInfo = Verlag, Ort, Ausgabe
+ViewItemMedium_lblSourcePubInfo = Ausgabe, Ort, Verlag
 
 ViewItemMedium_lblSourcePublishingInfo = Verlag, Ort, Ausgabe d. Quelle
 
