Add several japanese translations.
Former-commit-id: b3d6a8951ce023080f4ee867c0e760b54815642a

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -394,7 +394,7 @@ ENUM_IDENTIFIERTYPE_ = \u8A72\u5F53\u306A\u3057
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
-ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex Citekey
+ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex\u53c2\u7167ID
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
 
@@ -584,7 +584,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = \u8FFD\u52A0
 
-EditItem_btAddFile = Add File(s)
+EditItem_btAddFile = \u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0...
 
 EditItem_btAddTitle = \u5225\u30BF\u30A4\u30C8\u30EB\u3092\u8FFD\u52A0
 
@@ -682,13 +682,13 @@ EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
 EditItem_lblIssue = \u53F7
 
-EditItem_lblItemDepositor = Created by
+EditItem_lblItemDepositor = \u767b\u9332\u8005: 
 
 EditItem_lblItemLatestModification = Last modification date
 
-EditItem_lblItemLatestModifier = Last modified by
+EditItem_lblItemLatestModifier = \u6700\u7d42\u66f4\u65b0: 
 
-EditItem_lblItemVersionID = Item ID: 
+EditItem_lblItemVersionID = \u30a2\u30a4\u30c6\u30e0ID: 
 
 EditItem_lblItemlatestChange = Created on
 
@@ -1957,7 +1957,7 @@ adv_search_lblChkType_submitted = \u6295\u7A3F\u65E5
 adv_search_lblClassification = [NEW] Classification
 
 #Event
-adv_search_lblEventInvited = Invited
+adv_search_lblEventInvited = \u62db\u5f85\u8b1b\u6f14
 
 adv_search_lblFile = [NEW] Files
 
@@ -1971,6 +1971,8 @@ adv_search_lblFileAvailable_YES = [NEW] Yes
 
 #Date
 adv_search_lblFrom = \u958B\u59CB\u65E5(YYYY-MM-DD)
+
+adv_search_lblInclHistory = \u65e7\u540d\u30fb\u65b0\u540d\u3092\u542b\u3080
 
 adv_search_lblLanguage = \u8CC7\u6599\u306E\u8A00\u8A9E
 
@@ -2473,7 +2475,7 @@ mainMenu_lblQA = \u7BA1\u7406\u8005\u7528
 
 mainMenu_lblSubmission = \u65B0\u898F\u767B\u9332
 
-mainMenu_lblTools = (new) \u30C4\u30FC\u30EB
+mainMenu_lblTools = \u30C4\u30FC\u30EB
 
 mainMenu_lnkBlog = \u30D6\u30ED\u30B0
 
