--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -684,13 +684,13 @@ EditItem_lblIssue = \u53F7
 
 EditItem_lblItemDepositor = \u767b\u9332\u8005: 
 
-EditItem_lblItemLatestModification = Last modification date
+EditItem_lblItemLatestModification = \u6700\u7d42\u66f4\u65b0
 
 EditItem_lblItemLatestModifier = \u6700\u7d42\u66f4\u65b0: 
 
 EditItem_lblItemVersionID = \u30a2\u30a4\u30c6\u30e0ID: 
 
-EditItem_lblItemlatestChange = Created on
+EditItem_lblItemlatestChange = \u4f5c\u6210\u65e5
 
 EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9
 
@@ -1004,7 +1004,7 @@ SearchResultList_lblItems = \u4EF6
 
 SearchResultList_lblNoHits = 0 \u4EF6
 
-SearchResultList_lblRestServiceExamplePage = Insert query in REST-Interface
+SearchResultList_lblRestServiceExamplePage = \u540c\u3058\u691c\u7d22\u6761\u4ef6\u3092\u4f7f\u3063\u3066\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u51fa\u529b
 
 #
 # SearchResultList
@@ -1062,41 +1062,41 @@ SubmitItem_lnkSubmit = \u767B\u9332
 #
 # Tools
 #
-ToolsPage = Tools
+ToolsPage = \u30c4\u30fc\u30eb
 
 Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = \u5178\u62e0\u60c5\u5831\u306e\u7ba1\u7406 (CoNE)
 
-Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+Tools_lblCoNEText = \u8457\u8005\u540d\u3001\u96d1\u8a8c\u540d\u3001\u8a00\u8a9e\u3001\u5206\u985e\u7b49\u306e\u540d\u79f0\u5178\u62e0\u60c5\u5831\u306e\u4e00\u89a7\u8868\u793a\u3068\u7ba1\u7406
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
 Tools_lblREST = REST
 
-Tools_lblRESTHead = Search and Export (REST-Interface)
+Tools_lblRESTHead = \u691c\u7d22\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u51fa\u529b (REST)
 
-Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via REST-Interface.
+Tools_lblRESTText = PubMan\u30c7\u30fc\u30bf\u3092\u5916\u90e8\u30b7\u30b9\u30c6\u30e0\u3068\u7d71\u5408\u3059\u308b\u305f\u3081\u306b\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u51fa\u529b\u306e\u64cd\u4f5c\u304c\u53ef\u80fd\u3067\u3059\u3002
 
 Tools_lblSWORD = SWORD
 
-Tools_lblSWORDHead = SWORD-Interface
+Tools_lblSWORDHead = SWORD\u30b5\u30fc\u30d3\u30b9
 
-Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
+Tools_lblSWORDText = \u5916\u90e8\u30b5\u30fc\u30d0\u304b\u3089\u81ea\u52d5\u767b\u9332\u3059\u308b\u305f\u3081\u306e\u30b5\u30fc\u30d3\u30b9\u30a4\u30f3\u30bf\u30d5\u30a7\u30fc\u30b9
 
-Tools_lblTools = Tools
+Tools_lblTools = \u30c4\u30fc\u30eb
 
 Tools_lblUnAPI = unAPI
 
-Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
+Tools_lblUnAPIHead = \u30c7\u30fc\u30bf\u53d6\u5f97\u30b5\u30fc\u30d3\u30b9 (unAPI)
 
-Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
+Tools_lblUnAPIText = arXiv, BioMed Central, PubMed Central, Spires\u7b49\u306e\u5916\u90e8\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u304b\u3089\u6587\u732e\u30c7\u30fc\u30bf\u3092\u53d6\u5f97\u3067\u304d\u307e\u3059\u3002
 
-Tools_lblValidationService = Validation service
+Tools_lblValidationService = \u30c7\u30fc\u30bf\u691c\u8a3c\u30b5\u30fc\u30d3\u30b9
 
-Tools_lblValidationServiceHead = Validation service
+Tools_lblValidationServiceHead = \u30c7\u30fc\u30bf\u691c\u8a3c\u30b5\u30fc\u30d3\u30b9
 
-Tools_lblValidationServiceText = Check your XML data for formal correctness.
+Tools_lblValidationServiceText = \u5165\u529b\u3057\u305f\u6587\u732eXML\u30c7\u30fc\u30bf\u306e\u5185\u5bb9\u304c\u3042\u3063\u3066\u3044\u308b\u304b\u691c\u8a3c\u3057\u307e\u3059\u3002
 
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
 
