add Japanese labels translations.
Former-commit-id: 50e5fb8c41c562f724c1dfb7b9a91c259c72fcef

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1172,7 +1172,7 @@ ViewItemFull_lblFileLicense = CC\u30E9\u30A4\u30BB\u30F3\u30B9
 
 ViewItemFull_lblFileLicenseShow = \u5225\u30A6\u30A3\u30F3\u30C9\u30A6\u3067\u30E9\u30A4\u30BB\u30F3\u30B9\u60C5\u5831\u3092\u898B\u308B
 
-ViewItemFull_lblFileMimeTypeSize = MIME-Type / Checksum
+ViewItemFull_lblFileMimeTypeSize = MIME\u30bf\u30a4\u30d7 \uff0f \u30c1\u30a7\u30c3\u30af\u30b5\u30e0
 
 ViewItemFull_lblFileName = \u30D5\u30A1\u30A4\u30EB\u540D
 
@@ -1212,7 +1212,7 @@ ViewItemFull_lblLanguages = \u8A00\u8A9E
 
 ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
 
-ViewItemFull_lblLatestVersion = \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+ViewItemFull_lblLatestVersion = \u6700\u65b0\u7248
 
 ViewItemFull_lblLegalCaseCourtName = \u88C1\u5224\u6240\u540D
 
@@ -1346,23 +1346,23 @@ ViewItemLogPage = \u5C65\u6B74\u60C5\u5831\u3092\u8868\u793A
 
 ViewItemLog_Header = \u30A2\u30A4\u30C6\u30E0\u30ED\u30B0 
 
-ViewItemLog_lblAssignVersionPid = [NEW] Version PID assigned on
+ViewItemLog_lblAssignVersionPid = \u30d0\u30fc\u30b8\u30e7\u30f3PID\u4ed8\u4e0e\u65e5\u6642
 
 ViewItemLog_lblComment = \u8AAC\u660E:
 
-ViewItemLog_lblCreate = \u4F5C\u6210\u65E5
+ViewItemLog_lblCreate = \u4F5C\u6210\u65e5\u6642
 
 ViewItemLog_lblInRevision = \u5DEE\u3057\u623B\u3057
 
 ViewItemLog_lblItemLog = \u6587\u732E\u60C5\u5831\u306E\u5C65\u6B74
 
-ViewItemLog_lblRelease = \u516C\u958B\u65E5
+ViewItemLog_lblRelease = \u516C\u958B\u65e5\u6642
 
-ViewItemLog_lblSubmit = \u767B\u9332\u65E5
+ViewItemLog_lblSubmit = \u767B\u9332\u65e5\u6642
 
-ViewItemLog_lblUpdate = \u66F4\u65B0\u65E5 
+ViewItemLog_lblUpdate = \u66F4\u65B0\u65e5\u6642
 
-ViewItemLog_lblWithdraw = \u53D6\u308A\u4E0B\u3052\u65E5
+ViewItemLog_lblWithdraw = \u53D6\u308A\u4E0B\u3052\u65e5\u6642
 
 ViewItemMedium_lblAffiliations = \u6240\u5C5E
 
@@ -1954,7 +1954,7 @@ adv_search_lblChkType_publishedpr = \u7D19\u7248\u51FA\u7248\u65E5
 
 adv_search_lblChkType_submitted = \u6295\u7A3F\u65E5
 
-adv_search_lblClassification = [NEW] Classification
+adv_search_lblClassification = \u5206\u985e
 
 #Event
 adv_search_lblEventInvited = \u62db\u5f85\u8b1b\u6f14
@@ -2052,9 +2052,9 @@ all = \u5168\u3066\u3092\u9078\u629E
 
 cancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
-chooseWorkspace_descImportWorkspace = [new] Here you can review and maintain your multiple imports into PubMan. The items included in each import can be deleted or released via batch operations.
+chooseWorkspace_descImportWorkspace = PubMan\u3078\u306e\u4e00\u62ec\u767b\u9332\u72b6\u6cc1\u3092\u78ba\u8a8d\u3057\u3001\u5bfe\u8c61\u30a2\u30a4\u30c6\u30e0\u3092\u4e00\u62ec\u3067\u524a\u9664\u3057\u305f\u308a\u516c\u958b\u3057\u305f\u308a\u3067\u304d\u307e\u3059\u3002
 
-chooseWorkspace_descQAWorkspace = [new] In this area, moderators can view and work on all of their institute's publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status "pending" or "discarded" are not available at this point.
+chooseWorkspace_descQAWorkspace = \u767b\u9332\u30a2\u30a4\u30c6\u30e0\u3092\u7de8\u96c6\u3001\u78ba\u8a8d\u3067\u304d\u307e\u3059\u3002\u7ba1\u7406\u8005\u767b\u9332\u3055\u308c\u3066\u3044\u308b\u5834\u5408\u306f\u3001\u767b\u9332\u8005\u306b\u5dee\u3057\u623b\u3057\u305f\u308a\u3001\u516c\u958b\u51e6\u7406\u3092\u884c\u3046\u3053\u3068\u3082\u53ef\u80fd\u307e\u3059\u3002
 
 chooseWorkspace_descReportWorkspace = [new] Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
@@ -2654,7 +2654,7 @@ styleTheme_lblHighContrast = \u30B3\u30F3\u30C8\u30E9\u30B9\u30C8
 #STYLE THEMES
 styleTheme_lblPubMan = \u30D6\u30EB\u30FC
 
-styleTheme_lblSpecial = Special
+styleTheme_lblSpecial = \u30b9\u30da\u30b7\u30e3\u30eb
 
 submission_descEasySubmission = \u30B9\u30C6\u30C3\u30D7\u30D0\u30A4\u30B9\u30C6\u30C3\u30D7\u3067\u30A2\u30A4\u30C6\u30E0\u3092\u767B\u9332\u3057\u3066\u3044\u304F\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002\u306F\u3058\u3081\u306E\u3046\u3061\u306F\u3053\u3061\u3089\u3092\u4F7F\u3046\u3053\u3068\u3092\u63A8\u5968\u3057\u307E\u3059\u3002
 
