--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -250,7 +250,7 @@ ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = \u8B58\u5225\u5B50$1\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
 
-ViewItemFull_noPermission = Sorry, you have no permission to view this item version.
+ViewItemFull_noPermission = リクエストされたバージョンの内容を閲覧する権限が設定されていません。
 
 ViewItemFull_submitted = \u30A2\u30A4\u30C6\u30E0\u304C\u767B\u9332\u3055\u308C\u307E\u3057\u305F\u3002\u767B\u9332\u30E1\u30C3\u30BB\u30FC\u30B8\u306F\u4EE5\u4E0B\u306E\u901A\u308A\u3067\u3059:
 
@@ -598,7 +598,7 @@ itemHasBeenChangedInTheMeantime = The item you want to save, submit or release, 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
 
-itemIsNotLatestVersion = Please note that a newer version of this item is in progress.
+itemIsNotLatestVersion = ご覧のアイテムは最新版ではありません。
 
 #
 # Validation rule responses
@@ -662,7 +662,7 @@ searchResultList_PleaseTryOptions = Please try the following options:
 
 searchResultList_QueryString = \u4EE5\u4E0B\u306E\u691C\u7D22\u5F0F\u304C\u5B9F\u884C\u3055\u308C\u307E\u3057\u305F: 
 
-search_NoCriteria = No search criteria have been provided. Please use valid search critera and repeat.
+search_NoCriteria = 検索条件が入力されていません。検索式を再度入力して検索し直してください。
 
 # Search Error
 search_ParseError = Search expression contains illegal characters e. g. ", * or ? at first position.
@@ -672,9 +672,9 @@ search_TechnicalError = Technical error while processing the search query
 #
 # Tools
 #
-toolsOverview = Here is an overview of the available tools and interfaces.
+toolsOverview = PubManで使える追加サービスです。
 
-toolsMoreInformation = Further information can be found here:
+toolsMoreInformation = 詳細は以下のページをご覧ください: 
 
 #
 # Common
